set ui menu to 0px to stop extra space at top on mobile

--- a/CSS.css
+++ b/CSS.css
@@ -109,3 +109,7 @@ button {
 #mce-EMAIL {
 	width: 95%;
 }
+
+.ui.menu {
+	margin-top: 0px;
+}
